--- a/cn.zh-CN/最佳实践/数据加工.md
+++ b/cn.zh-CN/最佳实践/数据加工.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍如何添加自定义计算节点并且编排场景进行数据加工。
 
-您已经新建数据模型，详细参：[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
+您已经新建数据模型，详细参[设计字段标准](/cn.zh-CN/最佳实践/数据建模/设计字段标准.md)。
 
 可以对逻辑表进行新建自定义ETL节点编排场景进行数据加工。
 
@@ -10,15 +10,15 @@
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
+2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据开发](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7648373261/p283130.png)**，进入数据开发页面。
 
-3.  单击左侧导航栏**场景加工** \> **公共节点** \> **添加节点**。
+3.  单击左侧导航栏**公共节点** \> **添加节点**。
 
-4.  弹出**添加节点**页面，填写节点名称和code，服务类型选择为“离线服务”、计算资源类型为“MaxCompute”，作业类型为“SQL"，单击**下一步**。
+4.  将节点类型选择为**MaxCompute\_SQL**，单击**确定**。
 
-    1.  输入SQL语句。
+5.  在**添加节点**页面，输入SQL语句。
 
-        **节点"ods\_base\_yhkh\_di"**SQL语句：
+    1.  **节点"ods\_base\_yhkh\_di"**SQL语句如下：
 
         ```
         insert overwrite table ${ods_base_yhkh_di}
@@ -57,23 +57,23 @@
 
     2.  单击页面右侧**运行属性**，选择测试资源。
 
-    3.  节点输入：单击页面右侧**输入输出** \> **添加输入信息**，选择节点输入变量和数据模型，数据源类型为“Maxcompute”，在单击页面**![添加](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205624.png)**，选择节点输入变量和数据模型，数据源类型为“Maxcompute”。
+    3.  节点输入：单击页面右侧**参数变量** \> **添加节点输入**，填写输入code、选择数据源类型为“Maxcompute”、选择目标数据模型。
 
-    4.  节点输出：单击页面右侧**添加输出信息**，选择节点输出变量和数据模型，数据源类型为“Maxcompute”。
+    4.  节点输出：单击页面右侧**参数变量** \> **添加节点输出**，填写输出code，数据源类型为“Maxcompute”、选择目标数据模型。
 
         节点输入输出配置：
 
-        |节点名称和code|节点描述|节点输入变量和数据模型|节点输出变量和数据模型|
-        |---------|----|-----------|-----------|
+        |节点code|节点描述|节点输入变量和数据模型|节点输出变量和数据模型|
+        |------|----|-----------|-----------|
         |ods\_base\_yhkh\_di|银行客户信息|stg\_base\_yhkh\_di|ods\_base\_yhkh\_di|
 
-    5.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**按钮，单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**按钮，出现运行参数页面，输入默认值和参数名一致，单击**确定**，查看运行日志。
+    5.  单击![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7648373261/p283153.png)，在SQL解析页面，单击**确定**
 
-5.  单击页面**![发布代码版本](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205662.png)**，弹出**代码发布**页面，填写**新版本**为“1.0.0”，单击**确定**。
+    6.  单击左上角**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8561429061/p205637.png)**按钮，确认节点信息无误后，单击**确定**。
 
-6.  单击**![返回](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205667.png)**，页面返回到**节点管理**页面，查看新建的节点。
+    7.  单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)**按钮，弹出运行参数页面，输入默认值和参数名一致，单击**确定**，查看运行日志。
 
-7.  重复步骤4-6添加其他节点，其他节点SQL语句：
+6.  重复步骤4-5添加其他节点。
 
     **节点"ods\_base\_xykbkjl\_di"**SQL语句：
 
@@ -144,16 +144,22 @@
     |dws\_wp\_xyk\_di|信用卡信息|dwd\_xykyw\_bkjl\_di|dws\_wp\_xyk\_di|
     |dws\_ren\_kh\_di|银行客户信息|dwd\_khzx\_khxx\_di|dws\_ren\_kh\_di|
 
+7.  在公共节点目录，查看新建的节点。
+
+    ![公共节点.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5871133261/p282830.png)
+
+8.  在公共节点页面，单击待发布节点操作列的**发布**，在发布节点页面，填写新版本后，单击**确定**。
+
 
 ## 创建测试场景并部署、运行及上线
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
-2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据建模](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7366900161/p208211.png)**，进入数据建模页面。
+2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据开发](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7648373261/p283130.png)**，进入数据开发页面。
 
-3.  单击左侧导航栏**场景加工** \> **测试场景** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)** \> **新建测试场景**。
+3.  单击左侧导航栏**测试场景** \> **![进入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188815.png)** \> **新建测试场景**。
 
-4.  弹出**创建测试场景**页面，填写场景名称和code，单击**确定**，进入场景编排页面。
+4.  在**创建测试场景**页面，填写场景名称和code，单击**确定**，进入场景编排页面。
 
     创建测试场景配置：
 
@@ -161,16 +167,18 @@
     |----|------|
     |信息中心|xxzxx|
 
-    1.  单击左侧**系统节点** \> **输入数据**节点拖到画布上，选中节点，输入对应信息。
+    1.  在**节点资源**区域中，单击**系统节点**，并将**输入数据**节点拖至画布中。
+
+    2.  单击选中画布中的节点，在**节点属性**输入对应的Node Name，在**运行属性**，选择云计算资源类型和数据模型。
 
         新建输入数据节点配置：
 
-        |Node Code|Node Name|存储类型|数据模型|
-        |---------|---------|----|----|
-        |stg\_base\_yhkh\_di|银行客户信息|MaxCompute|stg\_base\_yhkh\_di|
-        |stg\_base\_xykbkjl\_di|信用卡信息|MaxCompute|stg\_base\_xykbkjl\_di|
+        |Node Name|存储类型|数据模型|
+        |---------|----|----|
+        |银行客户信息|MaxCompute|stg\_base\_yhkh\_di|
+        |信用卡信息|MaxCompute|stg\_base\_xykbkjl\_di|
 
-    2.  单击画布上添加的**输入数据节点**，单击页面右侧**运行属性**，选择测试和线上云计算资源，并输入**测试配置**和**线上配置**的表名。
+    3.  单击画布上添加的**输入数据节点**，单击页面右侧**运行属性**，选择测试和线上云计算资源，并输入**测试配置**和**线上配置**的表名。
 
         新建输入数据节点配置：
 
@@ -179,13 +187,13 @@
         |银行客户信息|根据客户定义选择，测试和线上场景不能相同|stg\_base\_yhkh\_di|
         |信用卡信息|stg\_base\_xykbkjl\_di|
 
-    3.  把左侧“Maxcompute”算法下拖入新建的所有节点到画布，并进行连线，连线过程中设置上下游节点连接详情，出的输出code-数据类型和入的输入code-数据类型一致连线如下图：
+    4.  把左侧“Maxcompute”算法下拖入新建的所有节点到画布，并进行连线，连线过程中设置上下游节点连接详情，出的输出code-数据类型和入的输入code-数据类型一致连线如下图：
 
-        ![连线](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8857900161/p208831.png)
+        ![连线](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5237244261/p208831.png)
 
-        ![连线效果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8857900161/p208828.png)
+        ![连线效果](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5237244261/p208828.png)
 
-    4.  单击画布上添加的**自定义数据节点**，单击页面右侧**节点属性**，选择节点版本为**正式版**，单击**参数变量**，单击节点输出下的**![修改输出](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208482.png)，**勾选**修改输出**，选择测试资源，输入输出表名，单击**线上资源**，勾选**配置输出表**，输入输出表名，单击**返回**。单击页面**运行属性**，选择测试和线上云计算资源。
+    5.  单击画布上添加的**自定义数据节点**，单击页面右侧**节点属性**，选择节点版本为**正式版**，单击**参数变量**，单击节点输出下的**![修改输出](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208482.png)，**勾选**修改输出**，选择测试资源，输入输出表名，单击**线上资源**，勾选**配置输出表**，输入输出表名，单击**返回**。单击页面**运行属性**，选择测试和线上云计算资源。
 
         公共节点配置：
 
@@ -198,11 +206,11 @@
         |dws\_ren\_kh\_di|根据客户定义选择，测试和线上场景不能相同。|dws\_ren\_kh\_di|
         |dws\_wp\_xyk\_di|根据客户定义选择，测试和线上场景不能相同。|dws\_wp\_xyk\_di|
 
-    5.  单击**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208484.png)**按钮后单击**![部署](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208486.png)**，对测试场景进行部署，等待部署成功。
+    6.  单击**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208484.png)**按钮后单击**![部署](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208486.png)**，对测试场景进行部署，等待部署成功。
 
         ![部署成功](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208490.png)
 
-    6.  部署成功后，单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p209620.png)**进行离线节点运行，弹出**设置业务日期**，单击**确定**，等待运行成功。
+    7.  部署成功后，单击**![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p209620.png)**进行离线节点运行，弹出**设置业务日期**，单击**确定**，等待运行成功。
 
         ![测试场景运行成功](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9857900161/p208827.png)
 
@@ -223,12 +231,10 @@
 
 2.  在页面左上角单击**![菜单](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6504337061/p188771.png)**按钮，选择**研发工作台** \> **资产加工** \> **![数据探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8366900161/p208214.png)**，进入数据探查页面。
 
-3.  单击**数据探查** \> **物理表探查**，进入物理表探查页面。
+3.  单击**数据探查** \> **物理表探查** \> **MaxCompute**。
 
-    1.  选中**MaxCompute**下的云计算资源，输入加工后节点输出表表名。
+    1.  选中**MaxCompute**下的云计算资源。
 
-    2.  单击物理表**操作**列**数据预览**，查看物理表数据预览。
-
-        ![探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0661429061/p205927.png)
+    2.  在关键词搜索栏，输入加工后的节点输出表表名，并单击该表名，在**数据预览**页面查看物理表数据详情。
 
 
