--- a/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
+++ b/cn.zh-CN/最佳实践/数据治理/添加计算节点数据加工.md
@@ -2,7 +2,7 @@
 
 本章节为您介绍如何添加计算节点进行数据加工。
 
-您已经新建数据模型，详细请参见[设计数据模型](/cn.zh-CN/最佳实践/数据治理/设计数据模型.md)。
+您已经新建数据模型，详细请参见[新建模型](/cn.zh-CN/最佳实践/数据建模/设计数据模型.md)。
 
 可以对逻辑表添加计算节点进行数据的加工，使数据变成符合标准的数据。
 
