--- a/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
+++ b/cn.zh-CN/最佳实践/数据治理/治理前模型质量检测.md
@@ -2,8 +2,8 @@
 
 本章节为您介绍如何新建逻辑表质量检测计划并运行任务。
 
-1.  您已经配置逻辑表的质量规则，详细请参见：[配置逻辑表质量规则]()。
-2.  您已经物理化逻辑表，详细参见[物理化逻辑表]()。
+1.  您已经配置逻辑表的质量规则，详细请参见[配置逻辑表质量规则](/cn.zh-CN/最佳实践/数据建模/设计数据模型.md)。
+2.  您已经物理化逻辑表，详细参见[物理化逻辑表](/cn.zh-CN/最佳实践/数据建模/设计数据模型.md)。
 
 设置数据模型的质量检测计划并查看检测任务为之后数据加工做准备。
 
