--- a/cn.zh-CN/最佳实践/准备工作/准备数据.md
+++ b/cn.zh-CN/最佳实践/准备工作/准备数据.md
@@ -7,8 +7,8 @@
 
 下面以在RDS数据中创建表yhkh和xyx\_bkxx；在MaxCompute数据库中创建表stg\_base\_yhkh\_di、stg\_base\_xykbkjl\_di、dws\_ren\_kh\_di和dws\_wp\_xyk\_di为例介绍。
 
--   在RDS数据库准备表yhkh和xyx\_bkxx，详细请参见[yhkh](#task_2404733/section_8yh_zzr_uuv)和[xyk\_bkxx](#task_2404733/section_nx1_vt3_qwt)。
--   在MaxCompute数据库准备表stg\_base\_yhkh\_di、stg\_base\_xykbkjl\_di、dws\_ren\_kh\_di和dws\_wp\_xyk\_di，详细请参见[stg\_base\_yhkh\_di](#task_2404733/section_ek7_0vi_18t)、[stg\_base\_xykbkjl\_di](#task_2404733/section_mnm_zg1_qer)、[dws\_ren\_kh\_di](#task_2404733/section_m0z_gp7_fdl)和[dws\_wp\_xyk\_di](#task_2404733/section_7jy_ztt_u4e)。
+-   在RDS数据库准备表yhkh和xyx\_bkxx，详细请参见[RDS数据库表语句](#section_8yh_zzr_uuv)。
+-   在MaxCompute数据库准备表stg\_base\_yhkh\_di、stg\_base\_xykbkjl\_di、dws\_ren\_kh\_di和dws\_wp\_xyk\_di，详细请参见[MaxCompute数据库表语句](#section_ek7_0vi_18t)。
 -   准备质量校验函数jar包源代码，详细请参见[质量校验函数jar包源代码](#section_9lw_v23_dnr)。
 
 ## RDS数据库表语句
