--- a/cn.zh-CN/用户指南/语义建模/标签同步/计划列表/启动同步计划.md
+++ b/cn.zh-CN/用户指南/语义建模/标签同步/计划列表/启动同步计划.md
@@ -21,7 +21,7 @@
     ![启动任务](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/4446140161/p211939.png)
 
     -   选择**立即运行**，单击**确认**。
-    -   选择**周期调度**，选择生效日期，调度周期包含天、周、月、分钟、小时可以选择，根据对应选择选择时间，单击**确认**。
+    -   选择**周期调度**，选择生效日期，调度周期包含天、周、月、分钟、小时可以选择，根据实际情况选择时间，单击**确认**。
     **说明：** 选择周期调度时，根据设置的日期启动任务计划。
 
 
