--- a/cn.zh-CN/用户指南/数据开发/公共节点/废弃节点.md
+++ b/cn.zh-CN/用户指南/数据开发/公共节点/废弃节点.md
@@ -2,7 +2,7 @@
 
 当节点的某个线上版本不再使用时，您可将该线上版本废弃掉。一个节点废弃某个版本后，后续再发布该节点时，废弃过的版本号也不可再使用。
 
-节点已发布了线上版本，并且待废弃的线上版本未被任何场景引用。如果需要查看哪些场景引用了该节点，请参见[查看节点引用的场景]()。
+节点已发布了线上版本，并且待废弃的线上版本未被任何场景引用。如果需要查看哪些场景引用了该节点，请参见[查看节点引用的场景](/cn.zh-CN/用户指南/数据开发/公共节点/查看节点引用的场景.md)。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
@@ -10,7 +10,7 @@
 
 3.  在数据开发页面，左侧导航栏单击**公共节点** \> **![目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6288133261/p282450.png)**。
 
-4.  在**公共节点**页面中，单击单击待废弃节点（正式版本）**操作**列的**废弃**。
+4.  在**公共节点**页面中，单击待废弃节点（正式版本）**操作**列的**废弃**。
 
 5.  在弹出的对话框中单击**是**，界面提示废弃成功。
 
