--- a/cn.zh-CN/用户指南/数据开发/线上场景/上线场景部署并运行.md
+++ b/cn.zh-CN/用户指南/数据开发/线上场景/上线场景部署并运行.md
@@ -2,8 +2,8 @@
 
 节点测试正常并发布线上版本后，您可将相应的测试场景进行上线操作，以使该场景可提供在线服务。只有已发布的算法才可用于线上环境。
 
--   场景中的每个节点均存在线上版本，详见[发布节点]()。
--   您已经完成测试场景的搭建并部署运行操作，详细请参见[新建测试场景]()。
+-   场景中的每个节点均存在线上版本，详见[发布节点](/cn.zh-CN/用户指南/数据开发/公共节点/发布节点.md)。
+-   您已经完成测试场景的搭建并部署运行操作，详细请参见[新建测试场景](/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md)。
 
 场景上线后会显示在**线上环境**中，只有**线上环境**中的场景才可提供线上服务，但您不可对**线上环境**中的场景的节点进行任何更改。
 
