--- a/cn.zh-CN/用户指南/数据开发/公共节点/添加节点.md
+++ b/cn.zh-CN/用户指南/数据开发/公共节点/添加节点.md
@@ -120,13 +120,13 @@
 
          
 
-         |  配置项   |                                                                                                       说明                                                                                                       |
-         |--------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-         | 添加输入信息 | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |
-         | 添加输出信息 | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |
-         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |
-         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |
-         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |
+         |  配置项   |                                                                                                       说明                                                                                                       |   |
+         |--------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---|
+         | 添加输入信息 | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |   |
+         | 添加输出信息 | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |   |
+         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |   |
+         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |   |
+         | 运行参数   | 输入/输出信息需要通过手动添加或解析代码生成，解析通过单击编辑页面的![解析](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3576223261/p282422.png)实现。 **说明** 只有当数据资源类型为Maxcompute_SQL时，才可以解析，其他数据类型不能使用解析。 |   |
 
          
 
@@ -144,15 +144,6 @@
       
    
    6. 单击![运行](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9561429061/p205638.png)按钮，出现运行参数页面，输入默认值，单击 **确定** ，查看运行日志。
-
-      节点运行参数信息配置 
-      -------------------------------
-
-      
-
-      | 配置项  |       说明        |
-      |------|-----------------|
-      | 运行参数 | 通过解析代码生成，填入默认值。 |
 
       
    
