--- a/cn.zh-CN/用户指南/数据开发/测试场景/编辑测试场景.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/编辑测试场景.md
@@ -2,7 +2,7 @@
 
 如果某个测试场景需要编辑，您可进行编辑操作。
 
-您已经添加测试场景，详细参见[新建测试场景]()。
+您已经添加测试场景，详细参见[新建测试场景](/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md)。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
