--- a/cn.zh-CN/用户指南/数据开发/公共节点/复制节点.md
+++ b/cn.zh-CN/用户指南/数据开发/公共节点/复制节点.md
@@ -1,6 +1,6 @@
 # 复制节点
 
-复制节点用于快速以指定节点的开发版本为蓝本来创建一个新节点。复制节点过程中，节点文件仍需要手动上传，其他参数均与蓝本一样，您可根据实际需要修改。
+复制节点用于快速以指定节点的开发版本为蓝本来创建一个新节点。复制节点过程中，节点文件仍需要手动上传，除此以外其他参数均与蓝本一样，您可根据实际需要修改。
 
 -   待创建的节点与已有节点相同或相似。
 -   复制节点的过程与新添加一个节点的过程完全相同，推荐您预先准备好节点文件、脚本等。
@@ -11,7 +11,7 @@
 
 3.  在数据开发页面，左侧导航栏单击**公共节点** \> **![目录](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6288133261/p282450.png)**。
 
-4.  在**公共节点**页面中，单击目标节点节点**操作**列的**复制**，然后根据实际需要在弹出的对话框中设置各参数。
+4.  在**公共节点**页面中，单击目标节点**操作**列的**复制**，然后根据实际需要在弹出的对话框中设置各参数。
 
     重新设置一个**节点Code**（必须修改），不可与其他节点重复，其他参数可根据实际需要进行修改。
 
