--- a/cn.zh-CN/用户指南/数据探查/物理表探查.md
+++ b/cn.zh-CN/用户指南/数据探查/物理表探查.md
@@ -27,7 +27,7 @@
 
    **说明**
 
-   云计算资源类型支持Maxcompute、MySQL、PostgresSQL和AnalyticDB PostgresSQL。
+   云计算资源类型支持Maxcompute、MySQL、PostgreSQL和AnalyticDB PostgreSQL。
    
 
 5. 在物理表探查页面左侧，单击选中待预览的物理表，进行物理表基础信息和数据预览。![物理表探查](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/2927033261/p282474.png)
