--- a/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md
+++ b/cn.zh-CN/用户指南/数据开发/测试场景/新建测试场景.md
@@ -35,7 +35,7 @@
     -   公共节点：即计算节点封装，可以保存，以便后续有相同的这种算法需求 直接调用。
     -   计算节点：只能随用随写。 |
     |场景画布的工具栏|场景画布的工具栏，支持保存、场景设置、测试环境部署、离线算法运行、场景上线、进入运维中心等功能。|
-    |场景画布|场景画布，是节点流程的搭建区域。在搭建节点流程时，您可拖拽算法节点到场景画布并设置参数，然后在节点节点间根据数据流向进行连线。|
+    |场景画布|场景画布，是节点流程的搭建区域。在搭建节点流程时，您可拖拽算法节点到场景画布并设置参数，然后在节点间根据数据流向进行连线。|
     |右侧属性设置区|可以进行场景和节点的属性设置。|
 
 6.  根据实际需要添加系统节点和SQL节点。
