--- a/cn.zh-CN/用户指南/数据资产中心/画像分析/群体画像/对比分析.md
+++ b/cn.zh-CN/用户指南/数据资产中心/画像分析/群体画像/对比分析.md
@@ -28,13 +28,11 @@
 
         **说明：**
 
-        高级设置只支持值类型为数值的标签。
+        -   高级l设置只支持值类型为数值的标签。
+        -   高级设置支持的聚合方式包含计数、平均值、求和、最大值和最小值。
+    2.  单击图表上的**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0823117951/p104878.png)**，图标，保存分析图表到本地。
 
-        高级设置支持的聚合方式包含计数、平均值、求和、最大值和最小值。
-
-    2.  单击图表上的**![保存](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0823117951/p104878.png)**,图标，保存分析图表到本地。
-
-        **说明：** :可查看下载到本地的png文件。
+        **说明：** 可查看下载到本地的png文件。
 
 7.  单击右上角**保存分析**，填写分析名称和描述，单击**确定**，保存群体分析结果。
 
