--- a/cn.zh-CN/用户指南/数据同步/离线数据同步.md
+++ b/cn.zh-CN/用户指南/数据同步/离线数据同步.md
@@ -28,18 +28,18 @@
 
         **说明：**
 
-        如果选择增量,可选择:
+        如果选择增量，可选择：
 
         -   增量字段**key**或**value**。
         -   字段数据类型**时间字符串**、**整体字符串**、**浮点字符串**、**字符串**。
-            -   数据字段选项仅适用于关系型数据库例如：MySQL、Oracle、SQL Server、PostgreSQL等类型的数据源。
+            -   数据字段选项仅适用于关系型数据库例如：MySQL、Oracle、SQL Server、PostgreSQL等类型的数据源。
             -   适用的字段类型包括字符串类型字段，类如：
                 -   Oracle字符串类型varchar,varchar2,char。
                 -   MySQL字符串类型varchar,char。
-        -   取数规则：只针对日期数据做取数规则，其中yyyy表示4位的年份、yy表示2位的年份、mm\(MM\)表示月、dd表示天、hh24表示小时（12进制使用hh）、mi表示分钟、ss表示秒。您可以任意组合参数，例如$\[yyyymmdd\]、$\[yyyy-mm-dd\]、$\[hh24miss\]、$\[hh24:mi:ss\]和$\[yyyymmddhh24miss\]等
-            -   1.$\{\}表达式可取业务日期数据,最小单位为天，例：$\{yyyyMMdd\},表示取前一天数据，$\{yyyyMM-1\}表示取前前一个月数据
-            -   2.$\[\]表达式取调度时间，最小单位为天，例：$\[yyyyMMdd-1/24\],表示取当前时间前一小时数据
-            -   3.支持时间戳取数函数sysMillis（毫秒）、sysSeconds（秒），单位为天，例：$\{sysMillis\}，表示取前一天数据
+        -   取数规则：只针对日期数据做取数规则，其中yyyy表示4位的年份、yy表示2位的年份、mm\(MM\)表示月、dd表示天、hh24表示小时（12进制使用hh）、mi表示分钟、ss表示秒。您可以任意组合参数，例如$\[yyyymmdd\]、$\[yyyy-mm-dd\]、$\[hh24miss\]、$\[hh24:mi:ss\]和$\[yyyymmddhh24miss\]等。
+            -   $\{\}表达式可取业务日期数据，最小单位为天，例：$\{yyyyMMdd\}，表示取前一天数据，$\{yyyyMM-1\}表示取前前一个月数据。
+            -   $\[\]表达式取调度时间，最小单位为天，例：$\[yyyyMMdd-1/24\]，表示取当前时间前一小时数据。
+            -   支持时间戳取数函数sysMillis（毫秒）、sysSeconds（秒），单位为天，例：$\{sysMillis\}，表示取前一天数据。
     3.  在选择目标端区域，选择**目标端** \> **数据对象**，操作完成后，单击**字典映射**。
 
         ![离线上云任务3-选择目标端.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0426049061/p204517.png)
