--- a/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
+++ b/cn.zh-CN/用户指南/运营工作台/资产管理/表资产管理.md
@@ -3,7 +3,7 @@
 本章节介绍如何编目、管理表资产。
 
 -   已配置云计算资源。
--   与计算资源下存在相应的物理表。
+-   云计算资源下存在相应的物理表。
 -   资产目录添加。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
