--- a/cn.zh-CN/用户指南/数据建模/逻辑表管理/查看逻辑表列表.md
+++ b/cn.zh-CN/用户指南/数据建模/逻辑表管理/查看逻辑表列表.md
@@ -1,7 +1,7 @@
 查看逻辑表列表 
 ============================
 
-本章介绍逻辑表列表页面的相关操作，包括导出、导入、手工新建、DDL新建、查看、删除、复制、物理化逻辑表等。
+创建完逻辑表后，您可以在此页面查看您已创建的逻辑表并执行相关操作，包括导出、导入、手工新建、DDL新建、查看、删除、复制、物理化逻辑表等。
 
 前提条件
 ----
@@ -59,7 +59,7 @@
    
    * 单击 **操作** 列的 **更多** **\>** **一致性** ，查看物理表的物理一致性与逻辑一致性信息，选择一条物理表与被引用计算机节点信息，单击 **查看** ，可查看数据逻辑表与物理表是否一致等信息。
 
-     * 模型物理化表与模型最新发布态是否一致(模型重复物理化时进行过Rename操作的历史物理表不参与比较)。
+     * 模型物理化表与模型最新发布态是否一致（模型重复物理化时进行过Rename操作的历史物理表不参与比较）。
 
        
      
