--- a/cn.zh-CN/用户指南/数据开发/线上场景/查看线上运维信息.md
+++ b/cn.zh-CN/用户指南/数据开发/线上场景/查看线上运维信息.md
@@ -2,7 +2,7 @@
 
 可查看线上场景的节点列表、部署/下线日志和运行日志。
 
-您已经部署运行线上场景，详细请参见[上线场景部署并运行]()。
+您已经部署运行线上场景，详细请参见[上线场景部署并运行](/cn.zh-CN/用户指南/数据开发/线上场景/上线场景部署并运行.md)。
 
 运维中心主要用于记录场景中节点的运行日志和部署日志，以便在场景运行失败时快速定位失败原因。主要包含以下功能：
 
