--- a/cn.zh-CN/用户指南/数据建模/逻辑表管理/查看逻辑表详情.md
+++ b/cn.zh-CN/用户指南/数据建模/逻辑表管理/查看逻辑表详情.md
@@ -1,6 +1,6 @@
 # 查看逻辑表详情
 
-本章介绍逻辑表详情页面下的各操作，包括：物理表、计算逻辑、质量规则等信息的新建、查看等。
+创建完逻辑表以后，您可以在这里查看已创建好的逻辑表中的字段等详细信息和操作，本章介绍逻辑表详情页面下的各操作，包括：物理表、计算逻辑、质量规则等信息的新建、查看等。
 
 已新建逻辑表。
 
@@ -50,8 +50,8 @@
 
     ![11102](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7578383261/p283168.png)
 
-    -   单击**字段详情**显示数据字段与分区字段信息。
-    -   单击**实体绑定**，可以给物理表绑定一个实体，更多请参考[绑表管理](/cn.zh-CN/用户指南/语义建模/标签模型/绑表管理.md)。
+    -   单击**字段详情**，显示数据字段与分区字段信息。
+    -   单击**实体绑定**，可以给物理表绑定一个实体。
     -   单击**数据预览**，可以查看字段详情及数据信息，完成后单击**关闭**。
     -   单击**质量结果**，可以查看质量结果信息与规则详情信息，比如表的空置率、数据完整性等规则的执行结果。更多详情请参考[质量检查任务](/cn.zh-CN/用户指南/质量评估/质量检查任务.md)。
 
@@ -86,12 +86,12 @@
 
     ![页面](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/7452193261/p284000.png)
 
-    -   选择相应的计算逻辑，单击**编辑**，进入SQL编译器对计算逻辑进行编辑。
-    -   选择相应的计算逻辑，单击**查看**，进入SQL编译器对计算逻辑进行查看。
-    -   选择相应的计算逻辑，单击**废弃**，废弃计算逻辑。
-    -   选择相应的计算逻辑，单击**删除代码**，删除计算逻辑中的代码。
-    -   选择相应的计算逻辑，单击**![编辑2.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8578383261/p195769.png)**图标，对逻辑表信息进行编辑，单击**确定**。
-    -   选择相应的计算逻辑，单击**![删除](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8578383261/p195768.png)**图标，出现删除提醒，单击**确定**。
+    -   单击**编辑**，进入SQL编译器对计算逻辑进行编辑。
+    -   单击**查看**，进入SQL编译器对计算逻辑进行查看。
+    -   单击**废弃**，废弃计算逻辑。
+    -   单击**删除代码**，删除计算逻辑中的代码。
+    -   单击**![编辑2.png](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8578383261/p195769.png)**图标，对逻辑表信息进行编辑，单击**确定**。
+    -   单击**![删除](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/8578383261/p195768.png)**图标，出现删除提醒，单击**确定**。
 
 ## 质量规则
 
