--- a/cn.zh-CN/用户指南/数据开发/线上场景/查看线上场景.md
+++ b/cn.zh-CN/用户指南/数据开发/线上场景/查看线上场景.md
@@ -2,7 +2,7 @@
 
 可查看线上场景的节点配置信息。
 
-您已经上线测试场景部署并运行，详细请参见[上线场景部署并运行]()。
+您已经上线测试场景部署并运行，详细请参见[上线场景部署并运行](/cn.zh-CN/用户指南/数据开发/线上场景/上线场景部署并运行.md)。
 
 1.  登录[数据资源平台控制台](https://dataq.console.aliyun.com)。
 
