--- a/cn.zh-CN/用户指南/数据同步/同步元数据.md
+++ b/cn.zh-CN/用户指南/数据同步/同步元数据.md
@@ -6,7 +6,7 @@
 前提条件 
 -------------------------
 
-已准备好相应的数据源，具体操作请参见[新建数据源](/cn.zh-CN/用户指南/数据同步/同步数据源/新建数据源.md)或[同步工作组内数据源](/cn.zh-CN/用户指南/数据同步/同步数据源/同步工作组内数据源.md)。
+已准备好相应的数据源，具体操作请参见[同步数据源](/cn.zh-CN/用户指南/数据同步/同步数据源.md)。
 
 操作步骤 
 -------------------------
